# AnaBarMC

./: .cproject  .gitignore  .project  AnaBarMC.cc  AnalyseSignals.C  AnalyseSignals.C.phantom  AnalyseSignals.ipynb  AnalyseSignalsEff.C  AnalyseSignalsPyROOT.ipynb  AnalyseSignalsPyROOT.ipynb.old  AnalyseSignalsPyROOT.py  AnalyseSignalsPyROOTCompare.ipynb  AnalyseSignalsRDataFrame.C  AnalyseSignalsRDataFrame.ipynb  AnalyseSignalsRDataFrame.py  AnalyseSignalsRDataFrameActual.ipynb  AnalyseSignalsRDataFrameActual.py  AnalyseSignalsRDataFrameCompare.ipynb  AnalyseSignalsRDataFrameNoKE.C  AnalyseSignalsRDataFrameNoKE.ipynb  AnalyseSignalsRDataFrameNoKECompare.C  AnalyseSignalsRDataFrameNoKECompare.ipynb  AnalyseSignals_C.d  Analyse_Generator.ipynb  Automate.sh  Automate.sh.EJBSept8_Good  Automate.sh.Ubuntu  Automate.sh.jlabdaq  AutomateAngelo.sh  AutomateMacOS.sh  AutomateUbuntu.sh  Automate_local.sh  CMakeLists.txt  CompareSimData.C  EventDisplay.C  FitADCSim.C  FitADCSimBrash.C  FitADCSimBrash2.C  FitADCSimBrash3.C.recent  GNUmakefile  (+31 more)
analysis/: AddNoise.C  AnalyseSignalsRDataFrame.C  AnalyseSignalsRDataFrame.ipynb  AnalyseSignalsRDataFrameNoKE.ipynb  AnalyseSignalsRDataFrameNoKECompare.ipynb  AnalyseSignalsThreshold.C  AnalyseSignalsTrigger.C  ChiSquareTest.C  CompareSimData.C  EventDisplay.C  EventDisplay2.C  EventDisplay2Noise.C  EventDisplay2_Nandhu.C  FitADCSimBrash.C  FitADCSimBrash3.C  GenCosmics.C  GenNeutrons.C  PlotDoseL.C  PlotMeanNumPhotonRatios.C  PlotMeanPE_Normalized.C  meanNumPhotVsDetPos_NM  meanNumPhotonRatios  noise_removal_test.C  noise_removal_test_single.C  timing_calibration.ipynb
batch/: AnaBarMCLocal.sh  (+45 more)
(+221 files in other folders)
